# django_htmx_examples

./: .envrc  .gitignore  README.md  README.org  dev.sh  flake.nix  pyproject.toml  todo.org
src/: manage.py
src/examples/: forms.py  views.py
src/examples/migrations/: 0001_initial.py
src/htmx_examples/: asgi.py  settings.py  urls.py  wsgi.py
tooling/nix/dev_shell/: default.nix  dev.sh
tooling/nix/dev_shell/process-compose/: default.nix  postgres.nix
tooling/nix/modules/: dev_shell.nix  services.nix
tooling/nix/modules/process-compose/: default.nix
