[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htmx_examples"
version = "0.1.0"
requires-python = ">=3.12"
description = "A collection of HTMX examples combinded with django."
authors = [
    {name = "Andreas Zweili", email = "andreas@zweili.ch"},
]
license = "GPL-3.0-or-later"
readme = {file = "README.org", content-type = "text/plain"}

[tool.hatch.build.targets.wheel]
packages = [
  "src/examples/",
  "src/htmx_examples/",
]

[tool.black]
line-length = 88
extend-exclude = '''
/(
  # Directories
  \..*
  | migrations
)/
'''

[tool.django-stubs]
django_settings_module = "htmx_examples"

[tool.docformatter]
black=true
exclude = ["migrations"]

[tool.isort]
extend_skip_glob = ["*/.*", "*/migrations/*"]
force_single_line = true
profile="black"

[tool.mypy]
exclude = [
    "migrations",
]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.pylint.main]
recursive = true
ignore = ["migrations"]
load-plugins = ["pylint_django"]

[tool.pylint.django]
django-settings-module = "htmx_examples.settings"

[tool.ruff]
exclude = [
  "migrations",
]
src = [
    "src",
    "tests",
]
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
select = [ "ALL" ]
ignore = [
    "COM812", # trailing commas, black takes care of this
    "ANN",    # type annotations, mypy takes care of this
    "I001",   # import sorting, isort takes care of this
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D102",
  "S101",  # Use of assert detected, we use pytest so kind of obvious
  "S106",  # Dummy passwords for tests
]
"tooling/**/*.py" = [
  "INP001",  # Tooling scripts don't need __init__.py
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.vulture]
exclude = ["src/*/migrations/*.py"]
min_confidence = 100
paths = ["src/", "tests/"]
sort_by_size = true

[tool.coverage.run]
omit = [
    "**/migrations/*",
    "src/manage.py",
    "src/zweili_search/asgi.py",
    "src/zweili_search/wsgi.py",
]
[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--strict-markers",
    "--strict-config",
]
